# tlms-backend-2

./: .env  Cargo.toml  Makefile  docker-compose.yaml
entity/: Cargo.toml
entity/src/: media.rs  members.rs  mod.rs  organization.rs  prelude.rs  users.rs
migration/src/: lib.rs  m20250213_211841_create_users.rs  m20250213_220702_create_members.rs  m20250214_144741_create_organization.rs  m20250214_150448_create_media_schema.rs
src/: app.config.toml  main.rs
src/app/: mod.rs
src/app/health/controller/: controller.rs
src/app/health/routes/: route.rs
src/app/members/: mod.rs
src/app/members/controllers/: controller.rs
src/app/members/dto/: dtos.rs
src/app/members/models/: model.rs
src/app/members/routes/: route.rs
src/app/organization/: mod.rs
src/app/organization/controllers/: controller.rs
src/app/organization/dto/: dtos.rs
src/app/organization/models/: model.rs
src/app/organization/routes/: route.rs
src/files_manager/: file_api.rs
src/libs/: error.rs  ip.rs  jwt.rs  mod.rs  pword.rs  validator.rs
src/middlewares/: auth.rs
src/setup/db/: pg.rs
src/utils/: file_methods.rs  macros.rs  mod.rs  models.rs  shared.rs
