[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
anyhow = "1.0.95"
base64 = "0.22.1"
cbc = "0.1.2"
chrono = "0.4.39"
config = "0.15.8"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.25"
md5 = "0.7.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.12"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
