[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
anyhow = "1.0.95"
base64 = "0.22.1"
cbc = "0.1.2"
chrono = "0.4.39"
config = "0.15.8"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.25"
md5 = "0.7.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.12"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1", features = ["full"] }


[profile.release]
codegen-units = 1        # Ensures maximum optimization at the cost of slower compile times
lto = "fat"              # Enables full Link-Time Optimization for better performance
strip = "symbols"        # Strips debug symbols, reducing binary size while keeping backtrace info
panic = "abort"          # Disables stack unwinding on panic, reducing binary size
opt-level = 3           # Maximum optimizations for speed
debug = false           # No debug symbols to reduce binary size
overflow-checks = false # Disable integer overflow checks (unsafe but faster)
incremental = false     # Disable incremental compilation for consistent optimizations
rpath = false           # Exclude runtime path information

[profile.dev]
opt-level = 1          # Slightly optimize for runtime performance without slowing down compilation
debug = true           # Include full debug symbols for better stack traces
debug-assertions = true # Enable extra runtime checks (e.g., bounds checks)
overflow-checks = true  # Keep integer overflow checks enabled
lto = "off"            # Disable Link-Time Optimization for faster rebuilds
incremental = true     # Enable incremental compilation to speed up recompilation
codegen-units = 256    # Increase parallelism for fast compilation
strip = "none"         # Keep debugging symbols for better debugging experience
panic = "unwind"       # Enable unwinding for better debugging (useful for catching panics)
rpath = false          # Avoid embedding runtime path information

